--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node .",
-    "dev": "ts-node-dev src/index.ts",
+    "postgres:start": "docker run -d -p 5432:5432 --name postgres -e POSTGRES_HOST_AUTH_METHOD=trust postgres:11-alpine",
+    "database:create": "docker exec postgres psql -U postgres postgres -c \"CREATE DATABASE readtome\"",
+    "dev": "npm run postgres:start && timeout 5 && npm run database:create && ts-node-dev src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,9 +28,12 @@
     "@types/jsonwebtoken": "^8.5.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "pg": "^8.2.1",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^8.10.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "^6.1.2",
+    "typeorm": "^0.2.24",
     "typescript": "^3.9.2"
   }
 }
