--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "readtome-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "scripts": {
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node .",
+    "dev": "ts-node-dev src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +20,15 @@
   "bugs": {
     "url": "https://github.com/capivaraapps/readtome-api/issues"
   },
-  "homepage": "https://github.com/capivaraapps/readtome-api#readme"
+  "homepage": "https://github.com/capivaraapps/readtome-api#readme",
+  "dependencies": {
+    "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "ts-node": "^8.10.1",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.2"
+  }
 }
